--- a/TODO
+++ b/TODO
@@ -1,3 +1,9 @@
+* Split off LillyConfiguration with static settings from LillyConnection
+   - LillyConnection points to LillyConfiguration
+   - applications can still have multiple LillyConfiguration defined
+   - many LillyConnection often share a single, static LillyConfiguration
+   - applications will often define LillyConnection as static const data
+
 * Consider unpacking SEQUENCE OF / SET OF
    - we have region memory, so let's use it
    - the data will always be needed anyway
